Fixed stretching of ARC header logo

--- a/css/style.css
+++ b/css/style.css
@@ -439,7 +439,7 @@ ol {
 
 .header-right {
     position: relative;
-    padding-top: 3%;
+    padding-top: 4%;
 }
 
 .main-menu {
